features/06 - members page / navigation link -  fixed the issue in members page and few alignments

--- a/src/Pages/Events/events.scss
+++ b/src/Pages/Events/events.scss
@@ -2,7 +2,7 @@
 
 .events__section {
     margin-top: 9rem;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
