--- a/src/components/Social/social.scss
+++ b/src/components/Social/social.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  // bottom: 3%;
+  z-index: 9999;
   top: 80%;
   left: 2%;
 
