--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -15,6 +15,7 @@ body {
   font-family: "Manrope", sans-serif;
   line-height: 1.3em;
   background-color: #fbfbfb;
+  scroll-behavior: smooth;
 }
 
 button,
